--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </a></div>
 
         <div class="bio">
-          <a href = "bio.html"><img src="assets/shadyTN.jpg" alt="Bio" class="image">
+          <a href = "bio.html"><img src="assets/shadyTN.JPG" alt="Bio" class="image">
           <div class="overlay2" >
             <div class="text">Bio</div>
           </div>
