--- a/art.html
+++ b/art.html
@@ -273,7 +273,7 @@
             </div>
 
             <div class="shady">
-              <img src="portfolio/shady.jpg" alt="Shady" class="image">
+              <img src="portfolio/shady.JPG" alt="Shady" class="image">
 
             </div>
 
