--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel='icon' href='assets/icon.png' type='image/x-icon'/>
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <title>Terrence Shi</title>
     <style>
         @font-face {
@@ -11,7 +12,7 @@
 
         }
         h1{
-            font-family: steelfish;
+            font-family: Oswald;
             font-size: 100px;
 
         }
