--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
         }
         h1{
-            font-family: Oswald;
+            font-family: "steelfish";
             font-size: 100px;
 
         }
         h2{
-            font-family: Aileron;
+            font-family: "Aileron";
             font-size: 14px;
             color: #696969;
             font-weight: normal;
