--- a/art.html
+++ b/art.html
@@ -12,7 +12,7 @@
 
         }
         h1{
-            font-family: steelfish;;
+            font-family: "steelfish";
             font-size: 100px;
 
         }
@@ -25,7 +25,7 @@
         }
 
         h2{
-            font-family: Aileron;
+            font-family: "Aileron";
             font-size: 14px;
             color: #696969;
             font-weight: normal;
