--- a/music.html
+++ b/music.html
@@ -17,24 +17,24 @@
 
         }
         h1{
-            font-family: steelfish;;
+            font-family: "steelfish";
             font-size: 100px;
 
         }
         h2{
-            font-family: Franklin Gothic;
+            font-family: "Franklin Gothic Medium";
             font-size: 4vh;
             font-weight: normal;
 
         }
         h3{
-            font-family: Aileron;
+            font-family: "Aileron";
             font-size: 3.5vh;
             font-weight: normal;
 
         }
         h4{
-            font-family: Aileron;
+            font-family: "Aileron";
             font-size: 14px;
             color: #696969;
             font-weight: normal;
