--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         @font-face {
             font-family: "steelfish";
-            src: url("fonts/steelfish_bd.ttf") format("truetype"),
+            src: url("Fonts/steelfish_bd.ttf") format("truetype"),
 
         }
         h1{
