--- a/resume.html
+++ b/resume.html
@@ -9,12 +9,12 @@
     <style>
         @font-face {
             font-family: "steelfish";
-            src: url("fonts/steelfish_bd.ttf") format("truetype"),
+            src: url("Fonts/steelfish_bd.ttf") format("truetype"),
 
         }
         @font-face {
             font-family: "expressway";
-            src: url("fonts/expressway rg.ttf") format("truetype"),
+            src: url("Fonts/expressway rg.ttf") format("truetype"),
 
         }
         h1{
