--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
     <div class = "title">
         <a href = "index.html"style="text-decoration: none" >
-            <h1>TERRENCE SHIiii</h1>
+            <h1>TERRENCE SHI</h1>
         </a>
     </div>
 
