--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel='icon' href='assets/icon.png' type='image/x-icon'/>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <title>Terrence Shi</title>
     <style>
         h2{
