--- a/music.html
+++ b/music.html
@@ -111,7 +111,7 @@
 
     <div class = "title">
         <a href = "index.html"style="text-decoration: none" >
-            <h1>TERRENCE SHI</h1>
+            <h1>Terrence Shi</h1>
         </a>
     </div>
 
