--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         .text {
           color: white;
           font-size: 50px;
-          font-family: steelfish;
+          font-family: 'Permanent Marker', cursive;
           position: absolute;
           top: 50%;
           left: 50%;
