--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <link rel='icon' href='assets/icon.png' type='image/x-icon'/>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Terrence Shi</title>
     <style>
         h2{
-            font-family: "Aileron";
+            font-family: 'Roboto', sans-serif;
             font-size: 14px;
             color: #696969;
-            font-weight: normal;
+            font-weight: lighter;
             line-height: 260%;
 
         }
