--- a/cs.html
+++ b/cs.html
@@ -5,6 +5,7 @@
     <link rel='icon' href='assets/icon.png' type='image/x-icon'/>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Terrence Shi</title>
     <style>
         h2{
@@ -14,9 +15,9 @@
 
         }
         h3{
-            font-family: "Aileron";
+            font-family: 'Roboto', sans-serif;
             font-size: 3.5vh;
-            font-weight: normal;
+            font-weight: lighter;
 
         }
         h4{
