--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <title>Terrence Shi</title>
     <style>
         h2{
-            font-family: Franklin Gothic;
+            font-family: 'Roboto', sans-serif;
             font-size: 4vh;
             text-align: left;
             font-weight: normal;
