--- a/resume.html
+++ b/resume.html
@@ -17,9 +17,10 @@
 
         }
         h3{
-            font-family: expressway;
+            font-family: 'Roboto', sans-serif;
             font-size: 6.5vh;
             text-align: left;
+            font-weight: bold;
 
         }
         h4{
