--- a/music.html
+++ b/music.html
@@ -9,7 +9,7 @@
     <title>Terrence Shi</title>
     <style>
         h2{
-            font-family: "Franklin Gothic Medium";
+            font-family: 'Roboto', sans-serif;
             font-size: 4vh;
             font-weight: normal;
 
@@ -17,11 +17,11 @@
         h3{
             font-family: 'Roboto', sans-serif;
             font-size: 3.5vh;
-            font-weight: lighter;
+            font-weight: normal;
 
         }
         h4{
-            font-family: "Aileron";
+            font-family: 'Roboto', sans-serif;
             font-size: 14px;
             color: #696969;
             font-weight: normal;
