--- a/art.html
+++ b/art.html
@@ -238,6 +238,19 @@
             padding: 0px;
             overflow-x: hidden; 
         }
+        @media only screen and (max-width: 820px) {
+            .bars{          
+                column-count: 1;
+
+            }
+            .title{
+                line-height: 450%;
+                margin-bottom: 10%;
+            }
+            h2{
+                line-height: 200%;
+            }
+        }
 
     </style>
 </head>
