--- a/index.html
+++ b/index.html
@@ -222,6 +222,22 @@
             padding: 0px;
             overflow-x: hidden; 
         }
+        @media only screen and (max-width: 820px) {
+            .bars{          
+                column-count: 1;
+
+            }
+            .title{
+                line-height: 450%;
+                margin-bottom: -5%;
+            }
+            h2{
+                line-height: 200%;
+            }
+            .pictures{
+                margin-bottom: 5%;
+            }
+        }
 
     </style>
 </head>
