--- a/index.html
+++ b/index.html
@@ -289,9 +289,12 @@
 
     <div class = "bottom_sec" style = "text-align: center">
         <div class = contact style = "text-align: left"><h2>
-            <img src="assets/email.png" class="logo" alt="email" class="image">terrenceshi@gmail.com<br>
-            <img src="assets/phone.png" class="logo" alt="phone" class="image">862-754-0573<br>
-            <img src="assets/address.png" class="logo" alt="addres" class="image">44 Oval Rd, Millburn, NJ<br>
+            <img src="assets/email.png" class="logo" alt="email" class="image">
+                terrenceshi@gmail.com<br>
+            <img src="assets/phone.png" class="logo" alt="phone" class="image" style="text-decoration: none" class = "gray">
+                862-754-0573<br>
+            <img src="assets/address.png" class="logo" alt="addres" class="image">
+                44 Oval Rd, Millburn, NJ<br>
 
             <div class = "socials">
                 <img src="assets/fb.png" class="logo" alt="fb" class="image" >
