--- a/cs.html
+++ b/cs.html
@@ -139,10 +139,13 @@
     </div>
 
     <div class = "bottom_sec" style = "text-align: center">
-        <div class = contact style = "text-align: left"><h4>
-            <img src="assets/email.png" class="logo" alt="email" class="image">terrenceshi@gmail.com<br>
-            <img src="assets/phone.png" class="logo" alt="phone" class="image">862-754-0573<br>
-            <img src="assets/address.png" class="logo" alt="addres" class="image">44 Oval Rd, Millburn, NJ<br>
+        <div class = contact style = "text-align: left"><h2>
+            <img src="assets/email.png" class="logo" alt="email" class="image">
+                terrenceshi@gmail.com<br>
+            <img src="assets/phone.png" class="logo" alt="phone" class="image" style="text-decoration: none" class = "gray">
+                862-754-0573<br>
+            <img src="assets/address.png" class="logo" alt="addres" class="image">
+                44 Oval Rd, Millburn, NJ<br>
 
             <div class = "socials">
                 <img src="assets/fb.png" class="logo" alt="fb" class="image" >
@@ -158,7 +161,7 @@
                     github.com/terrenceshi
                 </a>
             </div>
-            </h4>
+            </h2>
         </div>
 
     </div>
