--- a/resume.html
+++ b/resume.html
@@ -336,7 +336,8 @@
     </div>
 
     <div class = "bottom_sec" style = "text-align: center">
-        <div class = contact style = "text-align: left"><h2>
+        <div class = contact style = "text-align: left">
+            <h4>
             <img src="assets/email.png" class="logo" alt="email" class="image">
                 terrenceshi@gmail.com<br>
             <img src="assets/phone.png" class="logo" alt="phone" class="image" style="text-decoration: none" class = "gray">
@@ -358,7 +359,7 @@
                     github.com/terrenceshi
                 </a>
             </div>
-            </h2>
+            </h4>
         </div>
 
     </div>
