--- a/resume.html
+++ b/resume.html
@@ -315,11 +315,9 @@
         <div style = "text-align: left">
             <h3>CS Coursework</h3>
             <div class = "text">
-                <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;My first courses in Computer Science were high school introductionary
-                    courses in Java and Visual Basic. In my junior year, I took AP Computer Science. The cirriculum focused on 
-                    topics such as classes, Big O notation, an introduction to data structures, and the traveling salesman project.<br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As for college coursework, I've taken CS100 and CS114 at NJIT. CS100 was an
-                    introductionary course with Python, while CS114 focused on data structures and algorithms. Currently, I am taking CS1331 at Georgia Tech, a course that reinforces Java basics as well as JavaFX.</h2>
+                <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Because I've taken introductionary java courses at high school, NJIT, and now at Georgia Tech, I'd consider myself extremely familiar with java. In high school, the highlight project was the Traveling Salesman Project. My partner and I had to calculate the shortest path to take in a neighborhood while reaching multiple destinations, as well as graphing the results and computing the costs. 
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;At NJIT, in my CS114 class, there were various highlight projects including finding the zeroes of a cubic function using binary search; implementing addition, subtraction, and multiplication with extremely large numbers; implementing various heap and tree functions; and writing a calculator that took in strings.
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Over the summer, I had an internship at ENVRMNT, an arm of Verizon. I learned docker to set up and maintain servers that ran kubernetes to test various applications the team had developed.</h2>
 
             </div>
 
