--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="compsci">
           <a href = "cs.html"><img src="assets/interdisciplinaryTN.jpg" alt="CS" class="image">
           <div class="overlay4" >
-            <div class="text">CS</div>
+            <div class="text">Projects</div>
           </div>
         </a></div>
 
