--- a/cs.html
+++ b/cs.html
@@ -188,11 +188,12 @@
 		              to: 0.3 0.3 0.3;
 		              loop: true;
 		              dur: 1951;
-		              easing: linear;"
+		              easing: linear;
+                      delay: 1000;"
                       animation="property: position;
 		              to: 1 1.5 -3.25;
 		              loop: true;
-		              dur: 1950;
+		              dur: 1900;
 		              easing: linear;"></a-entity>
         
         <a-entity obj-model="obj: #grass; mtl: #grassm" position="-1 0.5 4" scale="1 0.45 .95"></a-entity>
