--- a/cs.html
+++ b/cs.html
@@ -155,7 +155,7 @@
         <a-asset-item id="grass" src="3dassets/LowPolyGrass.obj"></a-asset-item>
         <a-asset-item id="grassm" src="3dassets/LowPolyGrass.mtl"></a-asset-item>
         
-        <a-asset-item id="fire" src="3dassets/explode.obj"></a-asset-item>
+        <a-asset-item id="fire" src="3dassets/explode2.obj"></a-asset-item>
         <a-asset-item id="firem" src="3dassets/explode.mtl"></a-asset-item>
         
         <audio id="explodesound" src="3dassets/explode.mp3"></audio>
