--- a/cs.html
+++ b/cs.html
@@ -144,7 +144,7 @@
     <div class="content" style = "text-align: center">
         <div style = "text-align: left">
             <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is my aframe project for LMC2700, where I recreated the car explosion
-            from the Godfather. The car model is by me, while the explosion and grass is downloaded from the internet.</h2>
+            from the Godfather. The car model and animation is by me, the explosion is downloaded and modified, and grass is downloaded from the internet.</h2>
         </div>
         
     </div>
