--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
         .content
         {
           display: inline-block;
-          line-height: 50px;
+          line-height: 0.7;
           margin-right: 7.5%;
           margin-left: 7.5%;
           padding-bottom: 7.5%;
