--- a/cs.html
+++ b/cs.html
@@ -14,8 +14,9 @@
     <style>
         h2{
             font-family: 'Roboto', sans-serif;
-            font-size: 4vh;
+            font-size: 3.75vh;
             font-weight: normal;
+	    line-height: 1.8;
 
         }
         h3{
@@ -57,7 +58,6 @@
         .content
         {
           display: inline-block;
-          line-height: 50px;
           margin-right: 10%;
           margin-left: 10%;
           padding-bottom: 2.5%;
