--- a/music.html
+++ b/music.html
@@ -10,8 +10,9 @@
     <style>
         h2{
             font-family: 'Roboto', sans-serif;
-            font-size: 4vh;
+            font-size: 3.75vh;
             font-weight: normal;
+            line-height: 1.8;
 
         }
         h3{
@@ -53,7 +54,6 @@
         .content
         {
           display: inline-block;
-          line-height: 50px;
           margin-right: 10%;
           margin-left: 10%;
           padding-bottom: 7.5%;
