--- a/resume.html
+++ b/resume.html
@@ -317,7 +317,7 @@
             <div class = "text">
                 <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Because I've taken introductionary java courses at high school, NJIT, and now at Georgia Tech, I'd consider myself extremely familiar with java. In high school, the highlight project was the Traveling Salesman Project. My partner and I had to calculate the shortest path to take in a neighborhood while reaching multiple destinations, as well as graphing the results and computing the costs. 
                 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;At NJIT, in my CS114 class, there were various highlight projects including finding the zeroes of a cubic function using binary search; implementing addition, subtraction, and multiplication with extremely large numbers; implementing various heap and tree functions; and writing a calculator that took in strings.
-                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Over the summer, I had an internship at ENVRMNT, an arm of Verizon. I learned docker to set up and maintain servers that ran kubernetes to test various applications the team had developed.</h2>
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Over the summer, I had an internship at ENVRMNT, an arm of Verizon. I learned docker to set up and maintain containers that ran kubernetes to test various applications the team had developed.</h2>
 
             </div>
 
