--- a/resume.html
+++ b/resume.html
@@ -11,14 +11,14 @@
     <style>
         h2{
             font-family: 'Roboto', sans-serif;
-            font-size: 3.75vh;
+            font-size: 3vh;
             text-align: left;
             font-weight: normal;
 
         }
         h3{
             font-family: 'Roboto', sans-serif;
-            font-size: 6.5vh;
+            font-size: 5vh;
             font-weight: bold;
 
         }
@@ -315,9 +315,11 @@
         <div style = "text-align: left">
             <h3>CS Coursework</h3>
             <div class = "text">
-                <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Because I've taken introductionary java courses at high school, NJIT, and now at Georgia Tech, I'd consider myself extremely familiar with java. In high school, the highlight project was the Traveling Salesman Project. My partner and I had to calculate the shortest path to take in a neighborhood while reaching multiple destinations, as well as graphing the results and computing the costs. 
-                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;At NJIT, in my CS114 class, there were various highlight projects including finding the zeroes of a cubic function using binary search; implementing addition, subtraction, and multiplication with extremely large numbers; implementing various heap and tree functions; and writing a calculator that took in strings.
-                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Over the summer, I had an internship at ENVRMNT, an arm of Verizon. I learned docker to set up and maintain containers that ran kubernetes to test various applications the team had developed.</h2>
+                <h2>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I started learning CS at 9th grade, taking introductionary java courses and such. In my underclassman years of college, my fundamentals on object oriented programming were heavily reinforced with numerous entry level classes.
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In 2020, I took an intro to artifical intelligence course over the summer and a machine learning course in the fall. I went over path finding algorithms and stochastic scenarios combined with joint probabilities. The ML class is teaching me various clustering techniques currently.
+                <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As for work experience, I had an internship with ENVRMNT, an arm of verizon that explores various AR / VR tech and software development. There, I learned angular and AWS in order to put the home portal onto the company's AWS server. I also managed various docker containers in order to set up and test an application they were working on. 
+                </h2>
 
             </div>
 
