--- a/music.html
+++ b/music.html
@@ -131,7 +131,7 @@
 
     <div class="content" style = "text-align: center">
         <div style = "text-align: left">
-            <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;While I've been playing guitar and piano for years, I've only recently gotten into sound production. Currently, there are only samples. I will post full original songs when I create something I'm fully proud of.</h2>
+            <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Here are a few samples from me messing around in FL studio. Most of these are fully made with FL studio's instruments, while "Dino" uses a real guitar.</h2>
         </div>
         
         <div class = "combo">
