--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
         </a>
     </div>
 
+    <h3 style = "text-align: center; font-size: 25px">WEBSITE OVERHAUL COMING SOON</h3>
+    
+    
     <div class="pictures">
         <div class="art">
           <a href = "art.html"><img src="assets/catTN.jpg" alt="Art" class="image">
