--- a/cs.html
+++ b/cs.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Terrence Shi</title>
-        <meta name="description" content="An interactive getting started guide for Brackets.">
+        <meta name="description" content="Terrence Shi's portfolio website.">
+        <link rel='icon' href='assets/icon.png' type='image/x-icon'/>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="socicons/css/social-circles.min.css">
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
