--- a/cs.html
+++ b/cs.html
@@ -28,6 +28,7 @@
                 <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="cs.html">CS</a>
+                <a href="music.html">Music</a>
             </div>
         </header>
         
