--- a/music.html
+++ b/music.html
@@ -50,7 +50,7 @@
                 <h2>I like to do musics sometimes</h2>
 
                 <p>
-                    Here are a few samples from me messing around in FL studio. Most of these are fully made with FL studio's instruments, while "Dino" uses a real guitar and bass.
+                    Here are a few samples from me messing around in FL studio. Most of these are fully made with FL studio's instruments, while "Dino" and "Ultraviolet" use a real guitar and bass.
                 </p>
                 
                 <div class = "musics">
