--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     
                     <div class = "pfp">
-                        <img alt="me" class = "mePic" src="assets/me.jpg" />
+                        <img alt="me" class = "mePic" src="assets/sunglasses_wip.jpg" />
                     </div>
 
             </div>
