--- a/cs.html
+++ b/cs.html
@@ -43,7 +43,7 @@
                 <h2>Ok, so...</h2>
 
                 <p>
-                    In my most recent projects, I used various techniques I learned from my intro to ML class in order to compress images. 
+                    In my most recent projects, I used various techniques I learned from my intro to ML class in order to compress images. None of these methods were implemented with the help of pre-existing implementations from packages such as sklearning.
                 </p>
 
                 <p>
