--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
             }
             
             .backButton:hover{
-                background-color: #787878;
+                background-color: #ea81b5;
                 color: #f2f2f2;
             }
 
