--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <header class = "bigheader">
             <div class="navbar">
                 <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
+                <a href="twod.html">2D</a>
+                <a href="threed.html">3D</a>
                 <a href="cs.html">CS</a>
                 <a href="music.html">Music</a>
             </div>
