minor post update
-more compression
-more efficient css

--- a/cs.html
+++ b/cs.html
@@ -41,7 +41,13 @@
         
         <section id = "about" class = "section">
             <div class = "content">
-                <h2>Ok, so...</h2>
+                <h2>Coming soon...</h2>
+
+                <p>
+                    Currently working on an application. Will be completed by May 2021.
+                </p>
+                
+                <h2>Image Compression</h2>
 
                 <p>
                     In my most recent projects, I used various techniques I learned from my intro to ML class in order to compress images. None of these methods were implemented with the help of pre-existing implementations from packages such as sklearning.
