--- a/threed.html
+++ b/threed.html
@@ -19,8 +19,8 @@
             }
             
             .threed{
-                width: 30%;
-                margin: 1%;
+                width: 275px;
+                margin: 0.75em 0.75em;
             }
             
             .backButton{
