--- a/threed.html
+++ b/threed.html
@@ -72,7 +72,7 @@
                 <h2>Computer Guy</h2>
 
                 <p>
-                    Recently, I modeled a guy at a computer for a project. I rendered the image with a big emphasis on the computer's blue light. Check it out!
+                    Recently, I modeled a guy at a computer for a project. I rendered the image with a big emphasis on the computer's blue light. Check it out!!
                 </p>
                 
                 <div class = "row">
