--- a/threed.html
+++ b/threed.html
@@ -20,7 +20,8 @@
             
             .threed{
                 width: 275px;
-                margin: 0.75em 0.75em;
+                margin-left: auto;
+                margin-right: auto;
             }
             
             .backButton{
