--- a/cs.html
+++ b/cs.html
@@ -26,8 +26,7 @@
         <header class = "bigheader">
             <div class="navbar">
                 <a href="index.html">About</a>
-                <a href="twod.html">2D</a>
-                <a href="threed.html">3D</a>
+                <a href="port.html">Portfolio</a>
                 <a href="cs.html">CS</a>
                 <a href="music.html">Music</a>
             </div>
@@ -59,12 +58,6 @@
                 </p>
 
                 <img alt="gmm" src="assets/gmm.png" class = "image gmm"/>
-                
-                <h2>Coming soon...</h2>
-
-                <p>
-                    Currently developing an application. Will be completed by May 2021.
-                </p>
                 
             </div>
 
