--- a/music.html
+++ b/music.html
@@ -33,8 +33,7 @@
         <header class = "bigheader">
             <div class="navbar">
                 <a href="index.html">About</a>
-                <a href="twod.html">2D</a>
-                <a href="threed.html">3D</a>
+                <a href="port.html">Portfolio</a>
                 <a href="cs.html">CS</a>
                 <a href="music.html">Music</a>
             </div>
