--- a/cs.html
+++ b/cs.html
@@ -89,9 +89,9 @@
                 </p>
 
                 <div class = "row">
-                    <img alt="Acc Graph" src="assets/taylorKayneAcc.png" class = "graph tkAcc"/>
+                    <img alt="Acc Graph" src="assets/taylorKayneAcc.PNG" class = "graph tkAcc"/>
 
-                    <img alt="Loss Graph" src="assets/taylorKayneLoss.png" class = "graph tkLoss"/>
+                    <img alt="Loss Graph" src="assets/taylorKayneLoss.PNG" class = "graph tkLoss"/>
                 </div>
 
                 <p>
@@ -101,9 +101,9 @@
                 </p>
 
                 <div class = "row">
-                    <img alt="Acc Graph" src="assets/jamesRickAcc.png" class = "graph jrAcc"/>
+                    <img alt="Acc Graph" src="assets/jamesRickAcc.PNG" class = "graph jrAcc"/>
 
-                    <img alt="Loss Graph" src="assets/jamesRickLoss.png" class = "graph jrLoss"/>
+                    <img alt="Loss Graph" src="assets/jamesRickLoss.PNG" class = "graph jrLoss"/>
                 </div>
 
                 <p>
