new project baby

--- a/port.html
+++ b/port.html
@@ -85,6 +85,12 @@
                 </p>
 
                 <div class = "bgColor">
+                    <a href = "rami.html"style="text-decoration: none" >
+                        <img alt="wreck" src="assets/thumbnails/rami.png" class = "thumb rami"/>
+                    </a>
+                </div>
+
+                <div class = "bgColor">
                     <a href = "wreck.html"style="text-decoration: none" >
                         <img alt="wreck" src="assets/thumbnails/wreckMe.png" class = "thumb wreck"/>
                     </a>
