--- a/cs.html
+++ b/cs.html
@@ -116,9 +116,12 @@
                     This could be used to troll, doxx, or stalk those that use the internet's anonymity defensively. Worse,
                     Authoritarian Governments can track down anonymous jouranlists. Thus, a solution would be to combine
                     the model with a hate speech classifier so that the model can only be used to track hate speech.
-                    As the model becomes popular, it can be expanded to be used for other applications. Check out my
-                    <a href="https://github.com/terrenceshi/cs4650_proj2">github</a> for more.
+                    As the model becomes popular, it can be expanded to be used for other applications.
+                </p>
 
+                <p>
+                    Check out my
+                    <a href="https://github.com/terrenceshi/cs4650_proj2">github</a> for more.
                 </p>
 
                 <h2>Image Compression</h2>
