--- a/twod.html
+++ b/twod.html
@@ -35,6 +35,11 @@
                 justify-content: center;
             }
 
+            .rowpic{
+                height: 410px;
+                margin: 0.75em 0.75em;
+            }
+
         </style>
     </head>
     <body>
@@ -58,10 +63,6 @@
                 
                 <h2>2D Art - gifs</h2>
 
-                <p>
-                    Here's some of my older art.
-                </p>
-
                 <img alt="blowing up" src="portfolio/gifs/bu.gif" class = "gif blowingUp"/>
 
                 <img alt="it" src="portfolio/gifs/it_wip.gif" class = "gif it"/>
@@ -76,9 +77,19 @@
 
                 <img alt="starlord" src="portfolio/starlord.jpg" class = "art starlord"/>
 
+                <h2>2D Art - sketches</h2>
+
+                <div class = "row">
+                    <img alt="goblin" src="portfolio/goblin.jpg" class = "rowpic goblin"/>
+
+                    <img alt="hanni" src="portfolio/hanni.jpg" class = "rowpic hanni"/>
+                </div>
+
                 <img alt="moira" src="portfolio/moira.jpg" class = "art moira"/>
 
                 <img alt="faces" src="portfolio/faces.jpg" class = "art faces"/>
+
+                
 
             </div>
 
