--- a/newart.html
+++ b/newart.html
@@ -35,9 +35,9 @@
                 justify-content: center;
             }
 
-            .rowpic{
-                height: 410px;
-                margin: 0.75em 0.75em;
+            .row, .vidPortfolio{
+                display: flex;
+                justify-content: center;
             }
 
         </style>
@@ -61,29 +61,29 @@
         <div class = "pics" class = "section">
             <div class = "content">
                 
-                <h2>2D Art - Archive</h2>
+                <h2>New Art</h2>
 
-                <p>Here is an archive of older art as well as some sketches!</p>
+                <p>
+                    I've been spending my summer break working on the fundamentals and just grinding out art.
+                </p>
 
-                <img alt="blowing up" src="portfolio/gifs/bu.gif" class = "gif blowingUp"/>
+                <h2>Eren Yeager</h2>
 
-                <img alt="it" src="portfolio/gifs/it_wip.gif" class = "gif it"/>
+                <p>
+                    Coming soon!
+                </p>
 
-                <img alt="sleepland" src="portfolio/gifs/sleep_wip.gif" class = "gif sleepland"/>
+                <h2>I'm the Homelander...</h2>
 
-                <img alt="thanos" src="portfolio/gifs/josh_becomes_thanos.gif" class = "gif thanos"/>
-
-                <img alt="portal" src="portfolio/portal.jpg" class = "art portal"/>
-
-                <h2>2D Art - sketches</h2>
+                <p>
+                    Simple drawing from a frame of the television series, The Boys. Testing out polygonal lasso style drawing trying to capture Anthony Starr's facial expression.
+                </p>
 
                 <div class = "row">
-                    <img alt="goblin" src="portfolio/goblin.jpg" class = "rowpic goblin"/>
+                    <img alt="collage" src="portfolio\hl.png" class = "design homelander"/>
 
-                    <img alt="hanni" src="portfolio/hanni.jpg" class = "rowpic hanni"/>
+                    <img alt="transformation" src="portfolio/gifs/hlwip.gif" class = "design homelander_gif"/>
                 </div>
-
-                <img alt="moira" src="portfolio/moira.jpg" class = "art moira"/>
 
             </div>
 
