--- a/port.html
+++ b/port.html
@@ -85,8 +85,14 @@
                 </p>
 
                 <div class = "bgColor">
+                    <a href = "newart.html"style="text-decoration: none" >
+                        <img alt="newart" src="assets/thumbnails/newart.png" class = "thumb newart"/>
+                    </a>
+                </div>
+
+                <div class = "bgColor">
                     <a href = "rami.html"style="text-decoration: none" >
-                        <img alt="wreck" src="assets/thumbnails/rami.png" class = "thumb rami"/>
+                        <img alt="3dhead" src="assets/thumbnails/rami.png" class = "thumb rami"/>
                     </a>
                 </div>
 
@@ -120,6 +126,8 @@
         
         <footer id = "footer" class = "section">
             <div class = "socials">
+                <a href = "https://www.instagram.com/tshi_xd/" class = "icon-instagram social-button color">
+                </a>
                 <a href = "https://www.facebook.com/terrence.shi.9" class = "icon-facebook social-button color">
                 </a>
                 <a href = "https://www.linkedin.com/in/tshi" class = "icon-linkedin social-button color">
