--- a/wreck.html
+++ b/wreck.html
@@ -102,6 +102,8 @@
         
         <footer id = "footer" class = "section">
             <div class = "socials">
+                <a href = "https://www.instagram.com/tshi_xd/" class = "icon-instagram social-button color">
+                </a>
                 <a href = "https://www.facebook.com/terrence.shi.9" class = "icon-facebook social-button color">
                 </a>
                 <a href = "https://www.linkedin.com/in/tshi" class = "icon-linkedin social-button color">
