--- a/newart.html
+++ b/newart.html
@@ -67,12 +67,6 @@
                     I've been spending my summer break working on the fundamentals and just grinding out art.
                 </p>
 
-                <h2>Eren Yeager</h2>
-
-                <p>
-                    Coming soon!
-                </p>
-
                 <h2>I'm the Homelander...</h2>
 
                 <p>
@@ -80,10 +74,17 @@
                 </p>
 
                 <div class = "row">
-                    <img alt="collage" src="portfolio\hl.png" class = "design homelander"/>
+                    <img alt="homelander" src="portfolio\hl.png" class = "design homelander"/>
 
-                    <img alt="transformation" src="portfolio/gifs/hlwip.gif" class = "design homelander_gif"/>
+                    <img alt="homelander gif" src="portfolio/gifs/hlwip.gif" class = "design homelander_gif"/>
                 </div>
+
+                <h2>Eren Yeager</h2>
+
+                <p>
+                    Coming soon!
+                </p>
+                <img alt="eren yeager wip" src="portfolio\yeager.png" class = "design eren"/>
 
             </div>
 
