--- a/newart.html
+++ b/newart.html
@@ -67,6 +67,18 @@
                     I've been spending my summer break working on the fundamentals and just grinding out art.
                 </p>
 
+                <h2>I just keep moving forward until...</h2>
+
+                <p>
+                    I wanted to make something Attack on Titan related since Season 4 aired. After a few other sketches, I settled on something eren focused.
+                </p>
+
+                <div class = "row">
+                    <img alt="eren" src="portfolio\yeager.png" class = "design eren"/>
+
+                    <img alt="eren gif" src="portfolio/gifs/eren.gif" class = "design eren_gif"/>
+                </div>
+
                 <h2>I'm the Homelander...</h2>
 
                 <p>
@@ -78,13 +90,6 @@
 
                     <img alt="homelander gif" src="portfolio/gifs/hlwip.gif" class = "design homelander_gif"/>
                 </div>
-
-                <h2>Eren Yeager</h2>
-
-                <p>
-                    Coming soon!
-                </p>
-                <img alt="eren yeager wip" src="portfolio\yeager.png" class = "design eren"/>
 
             </div>
 
