--- a/newart.html
+++ b/newart.html
@@ -67,7 +67,7 @@
                     I've been spending my summer break working on the fundamentals and just grinding out art.
                 </p>
 
-                <h2>I just keep moving forward until...</h2>
+                <h2>I just keep moving forward...</h2>
 
                 <p>
                     I wanted to make something Attack on Titan related since Season 4 aired. After a few other sketches, I settled on something eren focused.
