--- a/newart.html
+++ b/newart.html
@@ -67,7 +67,21 @@
                     I've been spending my summer break working on the fundamentals and just grinding out art.
                 </p>
 
-                <h2>I just keep moving forward...</h2>
+                <h2>Split Face</h2>
+
+                <p>
+                    After my other projects this summer, I used my acquired skills in facial anatomy and geometric planes to make this painting, lighting and everything.
+
+                </p>
+
+                <div class = "row">
+                    <img alt="para" src="portfolio\para.png" class = "design para"/>
+
+                    <img alt="para gif" src="portfolio/gifs/para.gif" class = "design para_gif"/>
+                </div>
+
+
+                <h2>Eren Yeager</h2>
 
                 <p>
                     I wanted to make something Attack on Titan related since Season 4 aired. After a few other sketches, I settled on something eren focused.
