--- a/newart.html
+++ b/newart.html
@@ -70,7 +70,7 @@
                 <h2>Split Face</h2>
 
                 <p>
-                    After my other projects this summer, I used my acquired skills in facial anatomy and geometric planes to make this painting, lighting and everything.
+                    After my other projects this summer, I used my acquired skills in facial anatomy and geometric planes to make this painting from imagination, lighting and everything.
 
                 </p>
 
