--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <p>
                             I'm a Computational Media major in Georgia Tech's class of 2022. 
                             On this website, you'll find my portfolios for art, music, and CS. 
-                            My skills are well suited towards software development, NLP
+                            My skills are well suited towards software development, NLP,
                             3D modeling, graphic design, and digital art. 
                         </p>
 
