--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <h2>Hi, I'm Terrence</h2>
 
                         <p>
-                            I'm a Computational Media major in Georgia Tech's class of 2022. 
+                            I'm studying for my Master's Degree in CS at Georgia Tech. 
                             On this website, you'll find my portfolios for art, music, and CS. 
                             My skills are well suited towards software development, NLP,
                             3D modeling, graphic design, and digital art. 
